tests/baselines/reference/callSignatureFunctionOverload.errors.txt
==== tests/cases/compiler/callSignatureFunctionOverload.ts (1 errors) ====
    var foo: {
        (name: string): string;
        (name: 'order'): string;
        (name: 'content'): string;
        (name: 'done'): string;
    }
    
    var foo2: {
        (name: string): string;
        (name: 'order'): string;
        (name: 'order'): string;
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! callSignatureFunctionOverload.ts(11,5): error TS2146: Duplicate overload call signature.
        (name: 'done'): string;
    }
    